--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
     hooks:
       - id: check-useless-excludes
   - repo: https://github.com/prettier/prettier
-    rev: 1.19.1
+    rev: 2.0.5
     hooks:
       - id: prettier
         files: \.(css|js|md|markdown|json)
@@ -13,7 +13,7 @@ repos:
     hooks:
       - id: black
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.4.0
+    rev: v3.2.0
     hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -34,8 +34,8 @@ repos:
       - id: requirements-txt-fixer
       - id: sort-simple-yaml
       - id: trailing-whitespace
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v1.2.3
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 3.8.3
     hooks:
       - id: flake8
   - repo: local
@@ -49,6 +49,6 @@ repos:
         args: [-w, -i, "4"]
         types: [shell]
   - repo: https://github.com/asottile/blacken-docs
-    rev:  master
+    rev:  v1.7.0
     hooks:
       - id: blacken-docs
