--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -64,10 +64,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Python 3.8
+      - name: Setup Python 3.x
         uses: actions/setup-python@v1
         with:
-          python-version: [3.x]
+          python-version: 3.x
       - name: Build package
         run: |
           python setup.py sdist bdist_wheel
