--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -68,6 +68,18 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.x
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/*requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install wheel setuptools
+
       - name: Build package
         run: |
           python setup.py sdist bdist_wheel
