--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -87,4 +87,4 @@ jobs:
         uses: pypa/gh-action-pypi-publish@v1.3.1
         with:
           user: __token__
-          password: ${{ secrets.pypi_token }}
+          password: ${{ secrets.PYPI_PASSWORD }}
