--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,25 +22,32 @@ jobs:
       uses: actions/setup-python@v2.1.1
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Set env
+      run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/*/}
+
     - uses: actions/cache@v2
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/*requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f test-requirements.txt ]; then pip install -r test-requirements.txt; fi
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+
+        - name: Test with pytest
       run: |
         pytest --cov-report=xml --cov=citellusclient --cov=maguiclient
 
@@ -75,6 +82,7 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/*requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -83,6 +91,7 @@ jobs:
       - name: Build package
         run: |
           python setup.py sdist bdist_wheel
+
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@v1.3.1
         with:
