--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -85,10 +85,28 @@ jobs:
           python -m pip install --upgrade pip
           pip install wheel setuptools
 
+      - name: Branch name
+        id: branch_name
+        run: |
+          echo ::set-output name=SOURCE_NAME::${GITHUB_REF#refs/*/}
+          echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
+          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}          
+
+      - name: Build base image
+        run: |
+          echo $SOURCE_NAME
+          echo $SOURCE_BRANCH
+          echo $SOURCE_TAG
+        env:
+          SOURCE_NAME: ${{ steps.branch_name.outputs.SOURCE_NAME }}
+          SOURCE_BRANCH: ${{ steps.branch_name.outputs.SOURCE_BRANCH }}
+          SOURCE_TAG: ${{ steps.branch_name.outputs.SOURCE_TAG }}
+
       - name: Build package
         run: |
-          export RELEASE_VERSION=${GITHUB_REF#refs/*/}
           python setup.py sdist bdist_wheel
+        env:
+          RELEASE_VERSION: ${{ steps.branch_name.outputs.SOURCE_TAG }}
 
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@v1.3.1
