--- a/.github/workflows/broken-link-check.yml
+++ b/.github/workflows/broken-link-check.yml
@@ -14,3 +14,5 @@ jobs:
     steps:
       - name: Broken Link Check
         uses: technote-space/broken-link-checker-action@v1
+        with:
+          EXCLUDE_INTERNAL_LINKS: True
