--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -9,6 +9,18 @@ jobs:
   pre-commit:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2.3.1
+      with:
+        fetch-depth: 0
     - uses: actions/setup-python@v2.1.2
+    - uses: actions/cache@v2.1.0
+      with:
+        path: |
+          ~/.cache/pre-commit
+        key: ${{ runner.os }}-precommit-${{ hashFiles('**/.pre-commit-config.yaml/*') }}
+        restore-keys: |
+          ${{ runner.os }}-precommit-
+
     - uses: pre-commit/action@v2.0.0
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
