Expand excluded keywords
Change-Id: I4f7b7559ad90c44d2eafbe22891af0caa1ff0dfc

--- a/.github/workflows/broken-link-check.yml
+++ b/.github/workflows/broken-link-check.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Broken Link Check
         uses: technote-space/broken-link-checker-action@v2
         with:
-          EXCLUDED_KEYWORDS: "*.md"
+          EXCLUDED_KEYWORDS: "*.md, camo.githubusercontent.com"
