--- a/.github/workflows/update_semver.yml
+++ b/.github/workflows/update_semver.yml
@@ -1,15 +1,17 @@
 name: Update Semver
 on:
   push:
-    branches-ignore:
-      - '**'
     tags:
       - '*.*.*'
+  release:
+     types:
+       - published
+
 jobs:
   update-semver:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.3
       - uses: haya14busa/action-update-semver@v1
         with:
           major_version_tag_only: false  # (optional, default is "false")
