--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,6 @@ site_name: Citellus
 docs_dir: doc/
 theme: readthedocs
 repo_url: https://github.com/citellusorg/citellus/
-site_url: https://citellus.org
+site_url: https://citellusorg.github.io
 repo_name: GitHub
 use_directory_urls: false
