--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
   #     - id: pyupgrade
   #       args: [--py36-plus]
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.5.1
+    rev: v2.6.0
     hooks:
       - id: prettier
         files: \.(css|js|md|markdown|json)
@@ -28,6 +28,7 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.1.0
     hooks:
+
       - id: check-added-large-files
       - id: check-ast
       - id: check-case-conflict
@@ -90,7 +91,7 @@ repos:
   #   rev: v0.910
   #   hooks:
   #     - id: mypy
-  - repo: https://github.com/jumanjihouse/pre-commit-hooks
-    rev: 2.1.5
-    hooks:
-      - id: shellcheck
+  # - repo: https://github.com/jumanjihouse/pre-commit-hooks
+  #   rev: 2.1.6
+  #   hooks:
+  #     - id: shellcheck
