--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
+      - uses: actions/setup-go@v2
+        with:
+          go-version: ">=1.18"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
