--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,35 +6,27 @@ repos:
           - commit-msg
     repo: https://github.com/commitizen-tools/commitizen
     rev: v2.27.0
-
-  - repo: meta
-    hooks:
+  - hooks:
       - id: check-useless-excludes
-  # - repo: https://github.com/asottile/pyupgrade
-  #   rev: v2.19.4
-  #   hooks:
-  #     - id: pyupgrade
-  #       args: [--py36-plus]
-  - repo: https://github.com/pre-commit/mirrors-prettier
+    repo: meta
+  - hooks:
+      - files: \.(css|js|md|markdown|json)
+        id: prettier
+    repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.6.2
-    hooks:
-      - id: prettier
-        files: \.(css|js|md|markdown|json)
-  - repo: https://github.com/asottile/seed-isort-config
-    rev: v2.2.0
-    hooks:
+  - hooks:
       - id: seed-isort-config
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.10.1
-    hooks:
+    repo: https://github.com/asottile/seed-isort-config
+    rev: v2.2.0
+  - hooks:
       - id: isort
-  - repo: https://github.com/python/black
-    rev: 22.3.0
-    hooks:
+    repo: https://github.com/pre-commit/mirrors-isort
+    rev: v5.10.1
+  - hooks:
       - id: black
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.2.0
-    hooks:
+    repo: https://github.com/python/black
+    rev: 22.3.0
+  - hooks:
       - id: check-added-large-files
       - id: check-ast
       - id: check-case-conflict
@@ -43,17 +35,17 @@ repos:
       - id: check-merge-conflict
       - id: check-symlinks
       - id: check-vcs-permalinks
-      - id: debug-statements # Check for debugger imports and py37+ `breakpoint()` calls in python source.
+      - id: debug-statements
       - id: check-xml
-      - id: check-yaml
-        args:
+      - args:
           - --unsafe
+        id: check-yaml
       - id: end-of-file-fixer
       - id: forbid-new-submodules
-      - id: no-commit-to-branch
-        args:
+      - args:
           - --branch
           - gh-pages
+        id: no-commit-to-branch
       - id: requirements-txt-fixer
       - id: sort-simple-yaml
       - id: trailing-whitespace
@@ -61,43 +53,29 @@ repos:
       - id: detect-private-key
       - id: check-byte-order-marker
       - id: check-docstring-first
-      # -   id: detect-aws-credentials
-      # - id: fix-encoding-pragma
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
-    hooks:
+    repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.2.0
+  - hooks:
       - id: flake8
-  - repo: local
-    hooks:
-      - id: shfmt
-        name: shfmt
-        minimum_pre_commit_version: 2.4.0
-        language: golang
-        additional_dependencies:
+    repo: https://gitlab.com/pycqa/flake8
+    rev: 3.9.2
+  - hooks:
+      - additional_dependencies:
           - mvdan.cc/sh/v3/cmd/shfmt@v3.1.1
-        entry: shfmt
         args:
           - -w
           - -i
           - "4"
           - -s
+        entry: shfmt
+        id: shfmt
+        language: golang
+        minimum_pre_commit_version: 2.4.0
+        name: shfmt
         types:
           - shell
-  - repo: https://github.com/asottile/blacken-docs
-    rev: v1.12.1
-    hooks:
+    repo: local
+  - hooks:
       - id: blacken-docs
-  # - repo: https://github.com/hcodes/yaspeller.git
-  #   rev: v7.0.0
-  #   hooks:
-  #     - id: yaspeller
-  #       types:
-  #         - markdown
-  # - repo: https://github.com/pre-commit/mirrors-mypy
-  #   rev: v0.910
-  #   hooks:
-  #     - id: mypy
-  # - repo: https://github.com/jumanjihouse/pre-commit-hooks
-  #   rev: 2.1.6
-  #   hooks:
-  #     - id: shellcheck
+    repo: https://github.com/asottile/blacken-docs
+    rev: v1.12.1
