--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -3,6 +3,11 @@ on:
   schedule:
   - cron: "0 * * * *"
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+
 jobs:
   execute:
     runs-on: ubuntu-latest
