--- a/.github/workflows/broken-link-check.yml
+++ b/.github/workflows/broken-link-check.yml
@@ -1,3 +1,5 @@
+name: Broken Link Check
+
 on:
   schedule:
     - cron: "0 0 * * *" # daily
@@ -6,7 +8,10 @@ on:
   # push:
   # ...
 
-name: Broken Link Check
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   check:
     name: Broken Link Check
