--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -2,6 +2,11 @@ name: Greetings
 
 on: [pull_request_target, issues]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+
 jobs:
   greeting:
     runs-on: ubuntu-latest
