--- a/.github/workflows/shiftleft-analysis.yml
+++ b/.github/workflows/shiftleft-analysis.yml
@@ -6,6 +6,11 @@ name: SL Scan
 # This section configures the trigger for the workflow. Feel free to customize depending on your convention
 on: push
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+
 jobs:
   Scan-Build:
     # Scan runs on ubuntu, mac and windows
