--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
         stages:
           - commit-msg
     repo: https://github.com/commitizen-tools/commitizen
-    rev: v2.27.1
+    rev: v2.33.1
   - hooks:
       - id: check-useless-excludes
     repo: meta
@@ -13,7 +13,7 @@ repos:
       - files: \.(css|js|md|markdown|json)
         id: prettier
     repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.6.2
+    rev: v3.0.0-alpha.0
   - hooks:
       - id: seed-isort-config
     repo: https://github.com/asottile/seed-isort-config
@@ -25,7 +25,7 @@ repos:
   - hooks:
       - id: black
     repo: https://github.com/python/black
-    rev: 22.3.0
+    rev: 22.8.0
   - hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -54,7 +54,7 @@ repos:
       - id: check-byte-order-marker
       - id: check-docstring-first
     repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.2.0
+    rev: v4.3.0
   - hooks:
       - id: flake8
     repo: https://gitlab.com/pycqa/flake8
