--- a/maguiclient/remote.yml
+++ b/maguiclient/remote.yml
@@ -1,55 +1,54 @@
+---
 # Copyright (C) 2018, 2020, 2021 Pablo Iranzo Gómez <Pablo.Iranzo@gmail.com>
 
 # Requires: Ansible 2.2 (due to check_mode and timezone)
 # Uploads risu folder to /tmp on target host and runs from there and stores it back on local host for magui analysis
 
-- hosts: 127.0.0.1
-  connection: local
-  tasks:
-    - name: Delete local risu folder
-      file:
-        path=/tmp/risu/hostrun/
-        state=absent
+  - hosts: 127.0.0.1
+    connection: local
+    tasks:
+      - name: Delete local risu folder
+        file: path=/tmp/risu/hostrun/ state=absent
 
-- hosts: all
-  strategy: free
-  become: true
-  become_user: root
-  vars:
+  - hosts: all
+    strategy: free
+    become: true
+    become_user: root
+    vars:
     # risu_base: "{{ lookup('env','RISU_BASE') }}"
-    risu_base: '{{ playbook_dir | dirname + "/risuclient"}}'
-  tasks:
-    - name: Do risu
-      block:
-        - name: Mkdir target path
-          file:
-            state: directory
-            path: "/root/risu/risuclient/"
-            recurse: yes
-            mode: 0775
+      risu_base: '{{ playbook_dir | dirname + "/risuclient"}}'
+    tasks:
+      - name: Do risu
+        block:
+          - name: Mkdir target path
+            file:
+              state: directory
+              path: "/root/risu/risuclient/"
+              recurse: yes
+              mode: 0775
 
-        - name: Upload risu
-          synchronize:
-            src: "{{ risu_base }}/"
-            dest: "/root/risu/risuclient/"
-            rsync_path: "sudo rsync"
-            rsync_opts:
-              - "--exclude=.git"
-              - "--exclude=.tox"
-        - name: Run risu on target
-          command: python /root/risu/risuclient/shell.py -l -o /tmp/risu.json
-          args:
-            chdir: /root/risu/
-            creates: /tmp/risu.json
-          environment:
-            ANSIBLE_KEEP_REMOTE_FILES: "{{ lookup('env', 'ANSIBLE_KEEP_REMOTE_FILES') }}"
-        - name: Get remote execution results locally
-          fetch:
-            src: /tmp/risu.json
-            dest: /tmp/risu/hostrun/{{ inventory_hostname }}/risu.json
-            flat: yes
-      when: risu_base | trim != ''
-    - name: Complain on empty ENVironment variable
-      debug:
-        msg: "RISU_BASE undefined"
-      when: risu_base | trim == ''
+          - name: Upload risu
+            synchronize:
+              src: "{{ risu_base }}/"
+              dest: "/root/risu/risuclient/"
+              rsync_path: "sudo rsync"
+              rsync_opts:
+                - "--exclude=.git"
+                - "--exclude=.tox"
+          - name: Run risu on target
+            command: python /root/risu/risuclient/shell.py -l -o /tmp/risu.json
+            args:
+              chdir: /root/risu/
+              creates: /tmp/risu.json
+            environment:
+              ANSIBLE_KEEP_REMOTE_FILES: "{{ lookup('env', 'ANSIBLE_KEEP_REMOTE_FILES') }}"
+          - name: Get remote execution results locally
+            fetch:
+              src: /tmp/risu.json
+              dest: /tmp/risu/hostrun/{{ inventory_hostname }}/risu.json
+              flat: yes
+        when: risu_base | trim != ''
+      - name: Complain on empty ENVironment variable
+        debug:
+          msg: "RISU_BASE undefined"
+        when: risu_base | trim == ''
