--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
       - files: \.(css|js|md|markdown|json)
         id: prettier
     repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.3
+    rev: v3.0.0-alpha.4
   - hooks:
       - id: seed-isort-config
     repo: https://github.com/asottile/seed-isort-config
@@ -94,9 +94,9 @@ repos:
         args: [--mapping, '2', --sequence, '4', --offset, '2', '--preserve-quotes']
 
 
-  - repo: https://github.com/hcodes/yaspeller.git
-    rev: v8.0.1
-    hooks:
-      - id: yaspeller
-        types:
-          - markdown
+  # - repo: https://github.com/hcodes/yaspeller.git
+  #   rev: v8.0.1
+  #   hooks:
+  #     - id: yaspeller
+  #       types:
+  #         - markdown
