ci: update tox config for newer versions

--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,12 @@ envlist = flake8, py27, py3, misspellings
 skipsdist = True
 
 [testenv]
-passenv = CI TRAVIS TRAVIS_*
 usedevelop = True
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 setenv = LANGUAGE=en
 whitelist_externals = sh
+allowlist_externals = *
 commands =
     /usr/bin/find . -type f -name "*.pyc" -delete
     py.test --cov=risuclient --cov=maguiclient {posargs}
