style(flake8): sync config from .flake8 to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ commands = py.test {posargs}
 
 [flake8]
 show-source = True
-ignore = E402,E501,E722
+ignore =  E203, E266, E501, W503, F403, F401, E402, E722, C901
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,*/sumsos.py
 
 [testenv:markdown]
