--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,12 @@ envlist = flake8, py27, py3, misspellings
 skipsdist = True
 
 [testenv]
-passenv = CI TRAVIS TRAVIS_*
 usedevelop = True
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 setenv = LANGUAGE=en
 whitelist_externals = sh
+allowlist_externals = *
 commands =
     /usr/bin/find . -type f -name "*.pyc" -delete
     py.test --cov=risuclient --cov=maguiclient {posargs}
@@ -28,7 +28,7 @@ commands = py.test {posargs}
 
 [flake8]
 show-source = True
-ignore = E402,E501,E722
+ignore =  E203, E266, E501, W503, F403, F401, E402, E722, C901
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,*/sumsos.py
 
 [testenv:markdown]
