ci: Adjust token

--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -18,4 +18,4 @@ jobs:
         if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
         with:
           target: minor
-          github-token: "${{ secrets.GHA }}"
+          github-token: "${{ secrets.DEPENDABOT }}"
