--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,9 @@ commands = py.test {posargs}
 show-source = True
 ignore =  E203, E266, E501, W503, F403, F401, E402, E722, C901
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,*/sumsos.py
+max-line-length = 79
+max-complexity = 18
+select = B,C,E,F,W,T4,B9
 
 [testenv:markdown]
 commands = markdownlint .
