--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
         stages:
           - commit-msg
     repo: https://github.com/commitizen-tools/commitizen
-    rev: v2.42.0
+    rev: 3.2.2
   - hooks:
       - id: check-useless-excludes
     repo: meta
@@ -14,7 +14,7 @@ repos:
       - files: \.(css|js|md|markdown|json)
         id: prettier
     repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.4
+    rev: v3.0.0-alpha.9-for-vscode
   - hooks:
       - id: seed-isort-config
     repo: https://github.com/asottile/seed-isort-config
@@ -26,7 +26,7 @@ repos:
   - hooks:
       - id: black
     repo: https://github.com/python/black
-    rev: 23.1.0
+    rev: 23.3.0
   - hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -88,7 +88,7 @@ repos:
   #       args: [--py39-plus]
 
   - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
-    rev: 0.2.2 # or other specific tag
+    rev: 0.2.3 # or other specific tag
     hooks:
       - id: yamlfmt
         args: [--mapping, '2', --sequence, '4', --offset, '2', '--preserve-quotes']
