--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
         stages:
           - commit-msg
     repo: https://github.com/commitizen-tools/commitizen
-    rev: 3.2.2
+    rev: 3.6.0
   - hooks:
       - id: check-useless-excludes
     repo: meta
@@ -14,7 +14,7 @@ repos:
       - files: \.(css|js|md|markdown|json)
         id: prettier
     repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.9-for-vscode
+    rev: v3.0.2
   - hooks:
       - id: seed-isort-config
     repo: https://github.com/asottile/seed-isort-config
@@ -26,7 +26,7 @@ repos:
   - hooks:
       - id: black
     repo: https://github.com/python/black
-    rev: 23.3.0
+    rev: 23.7.0
   - hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -59,7 +59,7 @@ repos:
   - hooks:
       - id: flake8
     repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
+    rev: 6.1.0
   - hooks:
       - additional_dependencies:
           - mvdan.cc/sh/v3/cmd/shfmt@v3.1.1
@@ -79,7 +79,7 @@ repos:
   - hooks:
       - id: blacken-docs
     repo: https://github.com/asottile/blacken-docs
-    rev: 1.13.0
+    rev: 1.16.0
 
   # - repo: https://github.com/asottile/pyupgrade
   #   rev: v2.38.0
