--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,6 +40,8 @@ jobs:
 
       - name: Install dependencies
         run: |
+          apt -y install python
+          apt -y upgrade
           python -m pip install --upgrade pip
           pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
