ci: add dropped arguments to shmft

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -65,6 +65,11 @@ repos:
     hooks:
       # Choose one of:
       - id: shfmt # native (requires/installs Go to build)
+        args:
+          - -w
+          - -i
+          - "4"
+          - -s
 
         types:
           - shell
