--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
       - uses: actions/setup-python@v4
       - uses: actions/cache@v3
         with:
@@ -49,11 +48,15 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           if [ -f test-requirements.txt ]; then pip install -r test-requirements.txt; fi
 
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
         id: semantic
         with:
-          semantic_version: 19.0.5
+          semantic_version: 18.0.0
           extra_plugins: |
             @semantic-release/git
             @semantic-release/changelog
