--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,14 +15,7 @@ repos:
         id: prettier
     repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8
-  - hooks:
-      - id: seed-isort-config
-    repo: https://github.com/asottile/seed-isort-config
-    rev: v2.2.0
-  - hooks:
-      - id: isort
-    repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.10.1
+
   - hooks:
       - id: black
     repo: https://github.com/python/black
@@ -61,7 +54,7 @@ repos:
     repo: https://github.com/pycqa/flake8
     rev: 7.1.1
   - repo: https://github.com/scop/pre-commit-shfmt
-    rev: v3.8.0-1
+    rev: v3.9.0-1
     hooks:
       # Choose one of:
       - id: shfmt # native (requires/installs Go to build)
@@ -88,8 +81,7 @@ repos:
     rev: 0.2.3 # or other specific tag
     hooks:
       - id: yamlfmt
-        args: [--mapping, '2', --sequence, '4', --offset, '2', '--preserve-quotes']
-
+        args: [--mapping, "2", --sequence, "4", --offset, "2", "--preserve-quotes"]
 
   # - repo: https://github.com/hcodes/yaspeller.git
   #   rev: v8.0.1
@@ -97,3 +89,11 @@ repos:
   #     - id: yaspeller
   #       types:
   #         - markdown
+  - hooks:
+      - id: seed-isort-config
+    repo: https://github.com/asottile/seed-isort-config
+    rev: v2.2.0
+  - hooks:
+      - id: isort
+    repo: https://github.com/pre-commit/mirrors-isort
+    rev: v5.10.1
