--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,13 +15,13 @@ repos:
         id: prettier
     repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8
-
   - hooks:
       - id: black
     repo: https://github.com/python/black
     rev: 24.10.0
   - hooks:
       - id: check-added-large-files
+        args: [--maxkb=10000]
       - id: check-ast
       - id: check-case-conflict
       - id: check-executables-have-shebangs
@@ -53,6 +53,16 @@ repos:
       - id: flake8
     repo: https://github.com/pycqa/flake8
     rev: 7.1.1
+    rev: v4.6.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.6.9
+    hooks:
+      # Run the linter.
+      - id: ruff
+      # Run the formatter.
+      - id: ruff-format
+
   - repo: https://github.com/scop/pre-commit-shfmt
     rev: v3.10.0-2
     hooks:
@@ -63,9 +73,9 @@ repos:
           - -i
           - "4"
           - -s
-
         types:
           - shell
+
   - hooks:
       - id: blacken-docs
     repo: https://github.com/asottile/blacken-docs
@@ -84,7 +94,7 @@ repos:
         args: [--mapping, "2", --sequence, "4", --offset, "2", "--preserve-quotes"]
 
   # - repo: https://github.com/hcodes/yaspeller.git
-  #   rev: v8.0.1
+  #   rev: v10.0.1
   #   hooks:
   #     - id: yaspeller
   #       types:
